fixed small misalignment of history panel, so to show the full height of the custom scrollbar

--- a/app/NovaWeb/src/styles/partials/_select.scss
+++ b/app/NovaWeb/src/styles/partials/_select.scss
@@ -7,7 +7,6 @@ bp-select {
     .dropdown {
         border: 1px solid $gray-light;
         border-radius: 3px;
-        margin: $padding-root;
         float: right;
 
         .dropdown-toggle {
